2010-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/base.py:
	  Log when we create a socket.
	* flumotion/worker/job.py:
	  Add log category to the two heavens that create sockets.

2010-04-14  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/test/test_import.py:
	Do not try to import everything from external.

2010-04-14  Marc-André Lureau  <mlureau@flumotion.com>

	* po/POTFILES.in:
	Update translatables files.

2010-04-08  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Sébastien Merle

	* autogen.sh:
	* configure.ac:
	Fix automatic autoconf.
	* flumotion/common/common.py:
	Split version string such as '0.7.0.1-foo'

2010-04-08  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Sébastien Merle

	* configure.ac:
	* flumotion.spec.in:
	Fix flumotion.spec.in broken with version-gen changes.

2010-04-08  Sébastien Merle  <sebastien@flumotion.com>

	* common/common.mk:
	Do not check flumotion/extern with pep8.

2010-04-08  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Sébastien Merle

	* autogen.sh:
	Set default version to 0.7.0.1.
	Overridable with "VERSION=foo autogen.sh"
	Clean .version before autofoo.
	* flumotion/configure/configure.py:
	Split version string such as '0.7.0.1-foo'
	* common/common.mk:
	Make dist-hook use double-colon rule, to be able to add others
	dist-hook rules in different files.
	* common/version-gen (added):
	* Makefile.am:
	* configure.ac:
	* . (svn:ignore):
	Make version from SVN or GIT or tarball release.
	Ignore .version and .tarball-version

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/extern/command/command.py:
	Fixed option parsing errors.
	Added a callback for sub-classes special error handling.

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/extern/command/command.py:
	* flumotion/extern/command/help2man.py:
	* flumotion/extern/command/help2man.py (added):
	Updated external/command to revision 468.