@@ -1,5 +1,10 @@
 2010-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* common/validate-registry.py:
+	  Only fail on deprecationwarnings that are ours.
+
+2010-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/worker/base.py:
 	  Log when we create a socket.
 	* flumotion/worker/job.py:
